--- a/src/components/multiLanguages/MultiLanguages.css
+++ b/src/components/multiLanguages/MultiLanguages.css
@@ -1,18 +1,18 @@
 .multi-languages {
-     display: flex;
-     align-items: center;
+  display: flex;
+  align-items: center;
 }
 .multi-languages img {
-    margin: 5px;
-    transition: .15s ease-in;
-    z-index: 1
+  margin: 5px;
+  transition: 0.15s ease-in;
+  margin: 5px;
 }
 
 .multi-languages img:hover {
-    cursor: pointer;
-    transform: scale(1.2);
+  cursor: pointer;
+  transform: scale(1.2);
 }
 
-.multi-languages img:active{
-    transform: scale(1.3);
+.multi-languages img:active {
+  transform: scale(1.3);
 }
