--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -28,7 +28,7 @@
 }
 
 .navigation nav .logo {
-  color: #eee;
+  color: var(--main-color);
   text-decoration: none;
   font-size: 1.3rem;
   letter-spacing: 1.5px;
@@ -44,7 +44,7 @@
 }
 
 .navbar nav a:hover {
-  color: #fff;
+  color: var(--selected-color)
 }
 
 .inside-hamburger {
@@ -74,13 +74,11 @@
 /* *************** */
 /* hamburger menu */
 
-
 @media (max-width: 700px) {
-  .options {
-    display: none
-  }
 
-  .options {
+
+   .options {
+    display: none;
     margin: 0 0.5rem;
     background: #222;
     position: fixed;
@@ -92,7 +90,7 @@
     transition-delay: 100ms;
   }
 
-  .navigation .sticky .options {
+  /* .navigation .sticky .options {
     margin: 0 0.5rem;
     background: #222;
     position: absolute;
@@ -101,11 +99,10 @@
     z-index: -10;
     padding: 30px 0;
     opacity: 0;
-    /* animation: slideOut 6s cubic-bezier(0.62, 0.04, 0.3, 1.56); */
-    transition-delay: 100ms;
-  }
+     transition-delay: 100ms;
+  } */
 
-
+/* 
   .inside-hamburger {
     display: flex;
     flex-direction: column;
@@ -113,9 +110,9 @@
     width: 85%;
     min-height: 180px;
     margin: 0 auto;
-  }
+  } */
 
-  .options a {
+  /* .options a {
     width: 90%;
     letter-spacing: 1.7px;
     line-height: 1.6;
@@ -125,19 +122,19 @@
     font-size: 1.2rem;
     color: #777;
     margin: 0 0.8rem;
-  }
+  } */
 
-  .show-options {
+  /* .show-options {
     z-index: 10;
     opacity: 1;
     display: flex;
     flex-direction: column;
     animation: slideIn 0.4s cubic-bezier(.62, .04, .3, 1.56);
     animation-fill-mode: forwards;
-  }
+  } */
 
 
-  @keyframes slideIn {
+  /* @keyframes slideIn {
     0% {
       opacity: 0;
       width: 0%;
@@ -172,9 +169,9 @@
     cursor: pointer;
     border-radius: 5px;
     transition: background-color .1s ease-in-out;
-  }
+  } */
 
-  .icon-1,
+  /* .icon-1,
   .icon-2,
   .icon-3 {
     position: absolute;
@@ -184,8 +181,8 @@
     height: 3px;
     background-color: white;
     transition: all 400ms cubic-bezier(0.84, 0.06, 0.52, 1.8);
-  }
-
+  } */
+/* 
   .icon-1 {
     transform: translateY(-8px);
   }
@@ -204,12 +201,12 @@
 
   .icon-c {
     transform: rotate(-45deg);
-  }
-}
+  } */
+} 
 
 .fi .fi-gr {
   font-size: 20px;
   background-size: contain;
   background-position: 50%;
   background-repeat: no-repeat;
-}
+} 
