--- a/src/pages/cook/Cook.css
+++ b/src/pages/cook/Cook.css
@@ -21,13 +21,15 @@
   transition: 0.15s ease-in-out;
   border-radius: 15px;
   text-decoration: none;
-  color: #000;
+  color: var(--main-font-color);
   position: relative;
+  border: 2px solid var(--main-color);
 }
 
 .cook-container a:hover {
   cursor: pointer;
   transform: scale(1.014);
+  background-color: var(--fields-hover-bg-color);
 }
 
 .cook-container img {
@@ -47,33 +49,31 @@
   position: absolute;
   bottom: 0px;
   right: 0px;
-  background: var(--btns-bg);
-  color: #fff;
   margin: 10px;
-  padding: 5px 15px;
+  padding: 3px 15px;
   border-radius: 5px;
 }
 
 .breakfast {
-  background-color: bisque;
+  background-color: var(--fields-bg-color);
   grid-column: 1 / 2;
   grid-row: 1 / 2;
 }
 
 .lunch {
-  background-color: bisque;
+  background-color: var(--fields-bg-color);
   grid-column: 2 / 3;
   grid-row: 1 / 2;
 }
 
 .supper {
-  background-color: bisque;
+  background-color: var(--fields-bg-color);
   grid-column: 1 / 2;
   grid-row: 2 / 3;
 }
 
 .snack {
-  background-color: bisque;
+  background-color: var(--fields-bg-color);
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
