--- a/src/pages/cook/historyOfCooking/HistoryOfCooking.css
+++ b/src/pages/cook/historyOfCooking/HistoryOfCooking.css
@@ -1,8 +1,4 @@
 /* Datepicker */
-.datepicker-container {
-  background-color: var(--main-bg-color);
-}
-
 .datepicker-wrapper {
   max-width: 600px;
   width: 92%;
@@ -46,17 +42,6 @@
   transform: translateX(-3%);
 }
 
-.cancel-datepicker-img {
-  width: 25px;
-  height: 25px;
-  transition: transform ease-in 0.1s;
-}
-
-.cancel-datepicker-img:hover {
-  transform: scale(1.2);
-  cursor: pointer;
-}
-
 /* History Single Item */
 
 .history-single-item {
@@ -64,9 +49,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10px;
+  padding: 2px 10px;
   background-color: var(--fields-bg-color);
-  margin: 4px 0;
+  margin: 6px 0;
   border-radius: 5px;
   transition: all 0.05s ease;
 }
@@ -83,27 +68,16 @@
   min-width: 40%;
 }
 
-.more-img {
-  height: 32px;
-  transition: transform 0.1s ease-in;
-}
-
-.more-img:hover {
-  cursor: pointer;
-  transform: scale(1.2);
-}
-
 /* More information */
 .details-modal-container {
   width: 100vw;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   top: 0;
   left: 0;
   overflow: scroll;
   z-index: 10;
-
 }
 
 .details-inner {
@@ -155,13 +129,12 @@
 }
 
 .close-img {
-  width: 30px;
   transition: transform 0.1s ease-in;
 }
 
 .close-img:hover {
   cursor: pointer;
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 @media (max-width: 500px) {
