--- a/src/pages/shoppingList/ShoppingList.css
+++ b/src/pages/shoppingList/ShoppingList.css
@@ -19,6 +19,7 @@
   font-size: 1.2rem;
   transition: 0.1s ease-in;
   background-color: var(--fields-bg-color);
+  color: var(--main-font-color);
 }
 
 .btn-shopping-complete:hover {
