--- a/src/pages/cook/historyOfCooking/HistoryOfCooking.css
+++ b/src/pages/cook/historyOfCooking/HistoryOfCooking.css
@@ -1,4 +1,10 @@
 /* Datepicker */
+
+.datepicker-container {
+  background-color: var(--main-bg-color);
+  padding-bottom: 30px;
+}
+
 .datepicker-wrapper {
   max-width: 600px;
   width: 92%;
@@ -59,7 +65,6 @@
 .history-single-item:hover {
   cursor: pointer;
   background-color: var(--fields-hover-bg-color);
-  transform: scale(1.01);
 }
 
 .history-single-item .first-div {
@@ -126,15 +131,6 @@
   justify-content: space-between;
   min-width: 45%;
   max-width: 70%;
-}
-
-.close-img {
-  transition: transform 0.1s ease-in;
-}
-
-.close-img:hover {
-  cursor: pointer;
-  transform: scale(1.1);
 }
 
 @media (max-width: 500px) {
