--- a/src/pages/shoppingList/ShoppingList.css
+++ b/src/pages/shoppingList/ShoppingList.css
@@ -7,19 +7,20 @@
   width: 90%;
   max-width: 580px;
   margin: 0 auto;
-  padding-bottom: 15px;
+  padding-bottom: 70px;
 }
 
 .btn-shopping-complete {
   padding: 2px 20px;
   display: block;
   border-radius: 5px;
-  border: none;
   margin: 20px auto 0 auto;
   font-size: 1.2rem;
   transition: 0.1s ease-in;
-  background-color: var(--fields-bg-color);
-  color: var(--main-font-color);
+  background: var(--btns-bg);
+  color: var(--btns-color);
+  border: 2px solid var(--main-color);
+  font-weight: 400;
 }
 
 .btn-shopping-complete:hover {
