--- a/src/components/darkMode/DarkMode.css
+++ b/src/components/darkMode/DarkMode.css
@@ -3,7 +3,7 @@
   width: 55px;
   border-radius: 50px;
   background-color: var(--function-bar-bg);
-  border: none
+  border: none;
 }
 
 .icon-theme {
@@ -12,28 +12,28 @@
   height: 18px;
   border-radius: 50%;
   margin: 2px 6px;
-  transition: background-color .3s ease-in, transform .2s ease-in
+  transition: background-color 0.3s ease-in, transform 0.2s ease-in;
 }
 
 .toggle-theme:hover {
-  cursor: pointer
+  cursor: pointer;
 }
 
-body.dark .icon-theme {
+body.light .icon-theme {
   background-color: var(--main-color);
   transform: translateX(22px);
 }
 
-body.dark .icon-theme::after {
+body.light .icon-theme::after {
   background-color: var(--function-bar-bg);
   position: absolute;
   top: 1.3px;
   left: -2px;
-  content: "";
+  content: '';
   height: 15px;
   width: 14.5px;
   display: block;
-  border-radius: 50%
+  border-radius: 50%;
 }
 
 body.dark .toggle-theme {
