--- a/src/pages/shoppingList/components/Modals.css
+++ b/src/pages/shoppingList/components/Modals.css
@@ -27,6 +27,7 @@
 .modal-title {
   padding-bottom: 20px;
   font-size: 21px;
+  margin: 0 auto;
 }
 
 .content-modal {
@@ -49,21 +50,29 @@
 
 .btn {
   width: 100%;
-  height: 28px;
-  margin: 0 20px;
+  padding: 4.5px;
   font-size: 17px;
   border-radius: 5px;
   transition: 0.1s ease-in;
   background-color: var(--fields-bg-color);
   color: var(--main-font-color);
 }
+
+.check-icon {
+  margin-left: 50px;
+  border-radius: 5px;
+  background-color: var(--fields-bg-color);
+  transition: 0.1s ease-in;
+}
+
 .btns img {
   background-color: var(--fields-bg-color);
   height: 28px;
   transition: 0.1s ease-in;
 }
 
-.btn:hover {
+.btn:hover,
+.check-icon:hover {
   cursor: pointer;
   transform: scale(1.05);
 }
@@ -74,15 +83,18 @@
 
 .content-edit-modal {
   display: flex;
+  align-items: center;
 }
 
 .content-edit-modal input {
   background-color: var(--fields-bg-color);
   color: var(--main-font-color);
+  font-size: 1.1rem;
 }
 
 .content-edit-modal :first-child {
-  padding: 0 12px;
+  /* padding: 0 15px; */
+  margin-right: 4%
 }
 
 @media (max-width: 600px) {
