New layout in 'Empty shopping list'

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
   color: var(--main-font-color);
 }
 
+.App a {
+  color: var(--main-font-color);
+}
+
 :root {
   --main-bg-color: #222;
   --main-font-color: #fff;
